# biotrainer

./: .gitignore  Changelog.md  Contributing.md  Dockerfile  Dockerfile.streamlit  README.md  biotrainer.py  config.yml  data_standardization.md  pyproject.toml  run-biotrainer.py  run_autoeval-frontend.py  setup.py
.github/workflows/: docker-image.yml  python-app.yml
biotrainer/: __init__.py
biotrainer/autoeval/: __init__.py  autoeval.py  autoeval_frameworks.py  autoeval_progress.py  config_bank.py  data_handler.py  report_manager.py
biotrainer/bioengineer/: __init__.py  bioengineer.py  bioengineer_baselines.py  bioengineer_custom_model.py  bioengineer_data_classes.py  bioengineer_interfaces.py  bioengineer_models.py  bioengineer_utils.py
biotrainer/config/: __init__.py  config_exception.py  config_option.py  config_rules.py  config_utils.py  config_validation.py  configurator.py  cross_validation_config.py  cross_validation_options.py  deprecated_config.py  embedding_config.py  embedding_options.py  finetuning_config.py  general_config.py  general_options.py  hf_dataset_config.py  hf_dataset_options.py  input_config.py  input_options.py  model_config.py  model_options.py  protocols.py  training_config.py  training_options.py
biotrainer/datasets/: EmbeddingDataset.py  EmbeddingsDataset.py  ResidueEmbeddingsDataset.py  SequenceEmbeddingsDataset.py  TrainingDataLoader.py  __init__.py  collate_functions.py  embeddings_dataset.py
biotrainer/embedders/: __init__.py  aa_ontology_embedder.py  custom_embedder.py  custom_tokenizer.py  embedder_interfaces.py  embedding_service.py  huggingface_transformer_embedder.py  one_hot_encoding_embedder.py  onnx_embedder.py  preprocessing_strategies.py  random_embedder.py
biotrainer/inference/: Inferencer.py  __init__.py  inferencer.py
biotrainer/input_files/: __init__.py  biotrainer_seq_record.py  convert_deprecated_fastas.py  fasta.py  hf_dataset_to_fasta.py  utils.py
biotrainer/losses/: __init__.py  masked_mse_loss.py
biotrainer/models/: CNN.py  ConvNeXt.py  FNN.py  LightAttention.py  LogReg.py  __init__.py  biotrainer_model.py  cnn.py  fine_tuning_model.py  fnn.py  gp.py  light_attention.py  log_reg.py
biotrainer/optimizers/: __init__.py
biotrainer/output_files/: __init__.py  biotrainer_output_observer.py  output_manager.py  tensorboard_writer.py
biotrainer/protocols/: __init__.py  protocol.py  protocols.py
biotrainer/solvers/: ClassificationSolver.py  InteractionClassificationSolver.py  MetricsCalculator.py  ResidueClassificationSolver.py  ResidueSolver.py  ResiduesClassificationSolver.py  SequenceClassificationSolver.py  SequenceRegressionSolver.py  SequenceSolver.py  Solver.py  __init__.py  classification_solver.py  gp_solver.py  metrics_calculator.py  ndcg.py  residue_classification_solver.py  residue_regression_solver.py  residue_solvers.py  residues_classification_solver.py  residues_regression_solver.py  residues_solvers.py  sequence_classification_solver.py  sequence_regression_solver.py  sequence_solvers.py  solver.py  solver_utils.py
biotrainer/trainers/: EmbeddingsLoader.py  InputIOHandler.py  PredictionIOHandler.py  ResidueToClassTrainer.py  ResidueTrainer.py  SequenceTrainer.py  TargetManager.py  Trainer.py  __init__.py  custom_embedder.py  cv_splitter.py  default_pipeline.py  embedding_utils.py  embeddings.py  hp_manager.py  model_factory.py  residue_to_class.py  sequence_to_class.py  target_manager.py  target_manager_utils.py  trainer.py  utilities.py
biotrainer/utilities/: EarlyStopper.py  FASTA.py  Inferencer.py  __init__.py  cli.py  config.py  constants.py  cuda_device.py  data_classes.py  executer.py  execution_environment.py  fasta.py  feature_scaler.py  hashing.py  hf_dataset_to_fasta.py  logging.py  model_hash.py  model_params.py  ranking.py  revert_mappings.py  sanity_checker.py  seeder.py
biotrainer/validations/: __init__.py  bootstrapper.py  input_validator.py  sanity_checker.py
docs/: ADR001_data_standardization.md  ADR002_trainer_module.md  architecture_overview.md  autoeval.md  cli.md  config_file_options.md  config_file_options_overview.md  data_standardization.md  first_steps.md  h5_file_standardization.md  h5_standardization.md  troubleshooting.md
docs/adrs/: ADR001_data_standardization.md  ADR002_trainer_module.md
examples/: .gitignore  config.yml
examples/auto_resume_training/: config.yml
examples/autoeval/: .gitignore  README.md  plm_eval.ipynb  plm_eval_zeroshot.ipynb
examples/bio_embeddings_run/: input_parameters_file.yml
examples/biotrainer_files/: README.md  working_with_biotrainer_files.ipynb
examples/continue_model_training/: README.md  config.yml  sequences.fasta
examples/custom_embedder/: README.md
examples/custom_embeddings/: README.md
examples/docker/: README.md  config.yml  embeddings_file.h5  input.fasta  labels.fasta
examples/download_embeddings/: README.md  config.yml
examples/h5file_enhancement/: README.md
examples/hf_dataset/: .gitignore  README.md  config.yml
examples/inference/: README.md  predict.ipynb  predict.py
examples/multiple_test_sets/: README.md
examples/no_auto_resume_training/: .gitignore  README.md  config.yml
examples/onnx/: README.md  onnx_example.py
examples/onnx_embedder/: README.md  config.yml  custom_tokenizer_config.json  onnx_conversion.py
examples/onnx_predictor/: README.md  onnx_example.py
examples/protein_protein_interaction/: README.md  config.yml  interactions.fasta
examples/residue_to_class/: README.md  config.yml  labels.fasta
examples/residue_to_class_masked/: README.md  config.yml  input.fasta  labels.fasta  mask.fasta  sequences.fasta
examples/residue_to_value/: README.md  config.yml  input.fasta
examples/residues_to_class/: README.md  (+2 more)
notebooks/: predict.ipynb
tests/: README.md  conftest.py  test_autoeval.py  test_bioengineer.py  test_config.yml  test_configs.py  test_configurations.py  test_cross_validation.py  test_cv_splitter.py  test_embedders.py  test_embedding_service.py  test_embedding_utils.py  test_hp_search.py  test_inference.py  test_protocols.py  test_training.py
(+185 files in other folders)
