[tool.poetry]
name = "biotrainer"
version = "0.9.3"
description = "Biotrainers for embeddings"
authors = [
    "Christian Dallago <christian.dallago@tum.de>",
    "Sebastian Franz <sebastian.franz@tum.de>",
    "Joaquin Gomez Sanchez <joaquin.gomez@tum.de>",
    "Michael Heinzinger <mheinzinger@rostlab.org>"
]
license = "AFL v3.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: AFL License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization"
]

[tool.poetry.scripts]
biotrainer = 'biotrainer.utilities.cli:main'

[tool.poetry.urls]
issues = "https://github.com/sacdallago/biotrainer/issues"
repository = "https://github.com/sacdallago/biotrainer"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

accelerate = "^1.0.1"
biopython = ">=1.83,<2.0"
matplotlib = ">=3.7.2,<4.0.0"
h5py = ">=3.8.0,<4.0.0"
numpy = ">=1.26.4,<2.0.0"
pip-audit = "^2.7.3"
plotly = ">=5.16.1,<6.0.0"
protobuf = "^5.28.3"
pyyaml = "6.0.2"
"ruamel.yaml" = ">=0.17.40,<0.18.0"
sentencepiece = "^0.2.0"
scipy = ">=1.13.1,<2.0.0" # Latest version 1.14.1 requires python >= 3.10
scikit-learn = "^1.5.1"
tensorboard = "^2.18.0"
torch = "2.4.1"
tqdm = "^4.66.6"
transformers = "^4.46.0"
torchmetrics = "^1.5.1"
safetensors = "^0.4.4"
onnx = "1.16.1"
onnxscript = "^0.1.0.dev20240806"
onnxruntime = "^1.19.0"
pandas = "^2.2.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
build = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
