[project]
name = "biotrainer"
version = "1.2.1"
description = "Biological prediction models made simple."
authors = [
    {name = "Sebastian Franz", email = "sebastian.franz@tum.de"},
    {name = "Christian Dallago", email = "christian.dallago@tum.de"},
    {name = "Joaquin Gomez Sanchez", email = "joaquin.gomez@tum.de"},
    {name = "Michael Heinzinger", email = "mheinzinger@rostlab.org"}
]
license = {text = "AFL v3.0"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Academic Free License (AFL)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization"
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.11.0",
    "h5py>=3.8.0,<4.0.0",
    "protobuf>=5.29.1",
    "numpy>=2.1.3",
    "ruamel.yaml>=0.17.40,<0.18.0",
    "sentencepiece>=0.2.0",
    "scipy>=1.15.2",
    "scikit-learn>=1.5.1",
    "tensorboard>=2.18.0",
    "torch>=2.6.0,<3.0.0",
    "tqdm>=4.67.0",
    "transformers>=4.51.1",
    "torchmetrics>=1.7.1",
    "safetensors>=0.4.4",
    "onnx==1.19.1",
    "onnxscript>=0.5.4",
    "datasets>=3.5.1",
    "umap-learn>=0.5.7",
    "llvmlite>=0.44.0",
    "cyclopts>=3.16.0",
    "appdirs>=1.4.4",
    "peft>=0.15.2",
    "aaanalysis>=1.0.2",
    "blosum>=2.0.3",
    "pydantic>=2.12.3",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.1.1",
    "notebook>=7.4.0",
]
onnx-cpu = ["onnxruntime>=1.23.2"]
onnx-gpu = ["onnxruntime-gpu>=1.23.2"]
onnx-mac = ["onnxruntime>=1.21.0"]  # Replace with cpu ["onnxruntime>=1.21.0"] if coreml doesn't work on your Mac
dev = [
    "pytest>=8.4.2",
    "build>=1.2.2",
    "pip-audit>=2.9.0",
]

[project.urls]
Issues = "https://github.com/sacdallago/biotrainer/issues"
Repository = "https://github.com/sacdallago/biotrainer"

[project.scripts]
biotrainer = "biotrainer.utilities.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["biotrainer"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.3.4",
    "build>=1.2.2",
]
